[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/icons/commodities/food.svg" type="Texture" id=1]
[ext_resource path="res://assets/fonts/consolas_bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/gui/controls/city_commodity_stats.gd" type="Script" id=3]
[ext_resource path="res://scripts/gui/controls/production_bar.gd" type="Script" id=4]

[node name="CityCommodityStats" type="HBoxContainer"]
margin_right = 82.0
margin_bottom = 32.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
margin_top = 4.0
margin_right = 24.0
margin_bottom = 28.0
hint_tooltip = "Commodity"
size_flags_vertical = 4
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 28.0
margin_right = 116.0
margin_bottom = 32.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 88.0
margin_bottom = 16.0

[node name="ProductionLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 16.0
hint_tooltip = "Production"
mouse_filter = 0
custom_fonts/font = ExtResource( 2 )
text = " 25"

[node name="ProductionBar" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_top = 2.0
margin_right = 60.0
margin_bottom = 14.0
rect_min_size = Vector2( 32, 12 )
hint_tooltip = "Production / potential"
size_flags_vertical = 4
script = ExtResource( 4 )

[node name="SourceLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 88.0
margin_bottom = 16.0
hint_tooltip = "Potential production"
mouse_filter = 0
text = " 25"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 16.0
margin_right = 88.0
margin_bottom = 32.0

[node name="ConsumptionLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 24.0
margin_bottom = 16.0
hint_tooltip = "Consumption"
mouse_filter = 0
custom_fonts/font = ExtResource( 2 )
text = " 13"

[node name="ConsumptionBar" type="Control" parent="VBoxContainer/HBoxContainer2"]
margin_left = 28.0
margin_top = 2.0
margin_right = 60.0
margin_bottom = 14.0
rect_min_size = Vector2( 32, 12 )
hint_tooltip = "Consumption / potential"
size_flags_vertical = 4
script = ExtResource( 4 )
upper_color = Color( 1, 0.298039, 0.298039, 1 )

[node name="SinkLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 64.0
margin_right = 88.0
margin_bottom = 16.0
hint_tooltip = "Potential consumption / demand"
mouse_filter = 0
text = " 25"
